adding eyes on password inputs

--- a/src/pages/sign_in.html
+++ b/src/pages/sign_in.html
@@ -102,14 +102,21 @@
                 class="username"
               />
               <span class="error hidden"><div><img src="../../assets/images/error-svg.svg" alt="error"><p class="change-text-error">ელ.ფოსტა სავალდებულოა</p></div></span>
-
-              <input
+              <div class="password-input">
+                <input
                 type="password"
                 name="password"
                 id="password"
                 placeholder="პაროლი*"
                 class="psw"
-              />
+                >
+
+                <img
+                  class="show-password"
+                  src="../../assets/images/icon-eye.svg"
+                  alt="eye"
+                />
+              </div>
               <span class="error hidden"><div><img src="../../assets/images/error-svg.svg" alt="error"><p>პაროლი სავალდებულოა</p></div></span>
 
               <div class="remember-psw">
@@ -131,12 +138,25 @@
 
               <input class="phone-reg" type="number" placeholder="ტელეფონის ნომერი*" />
               <span class="error hidden"><div><img src="../../assets/images/error-svg.svg" alt="error"><p></p></div></span>
-
+              <div class="password-input">
               <input class="psw-reg" type="password" placeholder="პაროლი*" />
+              <img
+                  class="show-password"
+                  src="../../assets/images/icon-eye.svg"
+                  alt="eye"
+                />
               <span class="error hidden"><div><img src="../../assets/images/error-svg.svg" alt="error"><p></p></div></span>
+                </div>
 
+                <div class="password-input">
               <input class="psw-repeat-reg" type="password" placeholder="პაროლის გამეორება*" />
+              <img
+                  class="show-password"
+                  src="../../assets/images/icon-eye.svg"
+                  alt="eye"
+                />
               <span class="error hidden"><div><img src="../../assets/images/error-svg.svg" alt="error"><p></p></div></span>
+                </div>
 
               <div class="robot-rules">
                 <span>I'm not a Robot</span>
