changing border or rules and adding responsive

--- a/src/pages/sign_in.html
+++ b/src/pages/sign_in.html
@@ -163,7 +163,7 @@
                 <div class="rules">
                   <input type="checkbox" name="rules" id="rules" />
                   <label for="rules"
-                    ><a href="#">ვეთანხმები საიტის წესებს და პირობებს</a></label
+                    ><a href="#">ვეთანხმები საიტის წესებს და პირობებს*</a></label
                   >
                 </div>
               </div>
