fixing bugs with image sources

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           />
           <img
             class="close-burger hidden"
-            src="/assets/images/closeX.svg"
+            src="./assets/images/closeX.svg"
             alt="closeBurger"
           />
         </div>
@@ -69,9 +69,7 @@
             <li class="profile-weird">
               <a href="src/pages/profile.html"
                 >თეკლა ფიფქრი
-                <img
-                  src="../../assets/images/profile-photo.svg"
-                  alt="profileimg"
+                <img src="./assets/images/profile-photo.svg" alt="profileimg"
               /></a>
             </li>
             <li class="shesvla"><a href="src/pages/sign_in.html">შესვლა</a></li>
