--- a/src/pages/new_term.html
+++ b/src/pages/new_term.html
@@ -48,7 +48,7 @@
           />
           <img
             class="close-burger hidden"
-            src="/assets/images/closeX.svg"
+            src="../../assets/images/closeX.svg"
             alt="closeBurger"
           />
         </div>
