--- a/src/pages/definition.html
+++ b/src/pages/definition.html
@@ -52,7 +52,7 @@
           />
           <img
             class="close-burger hidden"
-            src="/assets/images/closeX.svg"
+            src="../../assets/images/closeX.svg"
             alt="closeBurger"
           />
         </div>
