--- a/src/pages/sign_in.html
+++ b/src/pages/sign_in.html
@@ -46,7 +46,7 @@
           />
           <img
             class="close-burger hidden"
-            src="/assets/images/closeX.svg"
+            src="../../assets/images/closeX.svg"
             alt="closeBurger"
           />
         </div>
