--- a/src/pages/termins_bank.html
+++ b/src/pages/termins_bank.html
@@ -53,7 +53,7 @@
           />
           <img
             class="close-burger hidden"
-            src="/assets/images/closeX.svg"
+            src="../../assets/images/closeX.svg"
             alt="closeBurger"
           />
         </div>
