adding a tags to project authors on two pages

--- a/src/pages/definition.html
+++ b/src/pages/definition.html
@@ -143,7 +143,7 @@
               </div>
               <div class="info">
                 <h2>ათი შოკოლადი</h2>
-                <span class="author">ავტორი ავტორი</span>
+                <a href="#" class="author">ავტორი ავტორი</a>
               </div>
               <div class="about">
                 <span class="count">1,920</span>
@@ -156,7 +156,7 @@
               </div>
               <div class="info">
                 <h2>ათი შოკოლადი</h2>
-                <span class="author">ავტორი ავტორი</span>
+                <a href="#" class="author">ავტორი ავტორი</a>
               </div>
               <div class="about">
                 <span class="count">1,920</span>
@@ -169,7 +169,7 @@
               </div>
               <div class="info">
                 <h2>ათი შოკოლადი</h2>
-                <span class="author">ავტორი ავტორი</span>
+                <a href="#" class="author">ავტორი ავტორი</a>
               </div>
               <div class="about">
                 <span class="count">1,920</span>
