--- a/src/pages/termins_bank.html
+++ b/src/pages/termins_bank.html
@@ -299,7 +299,7 @@
               </div>
               <h2>ათი შოკოლადი</h2>
               <div class="spans">
-                <span class="author">ავტორი ავტორი</span>
+                <a href="#" class="author">ავტორი ავტორი</a>
                 <span class="date">3 კვირის წინ</span>
               </div>
             </div>
@@ -322,7 +322,7 @@
               </div>
               <h2>ათი შოკოლადი</h2>
               <div class="spans">
-                <span class="author">ავტორი ავტორი</span>
+                <a href="#" class="author">ავტორი ავტორი</a>
                 <span class="date">3 კვირის წინ</span>
               </div>
             </div>
@@ -345,7 +345,7 @@
               </div>
               <h2>ათი შოკოლადი</h2>
               <div class="spans">
-                <span class="author">ავტორი ავტორი</span>
+                <a href="#" class="author">ავტორი ავტორი</a>
                 <span class="date">3 კვირის წინ</span>
               </div>
             </div>
@@ -368,7 +368,7 @@
               </div>
               <h2>ათი შოკოლადი</h2>
               <div class="spans">
-                <span class="author">ავტორი ავტორი</span>
+                <a href="#" class="author">ავტორი ავტორი</a>
                 <span class="date">3 კვირის წინ</span>
               </div>
             </div>
@@ -391,7 +391,7 @@
               </div>
               <h2>ათი შოკოლადი</h2>
               <div class="spans">
-                <span class="author">ავტორი ავტორი</span>
+                <a href="#" class="author">ავტორი ავტორი</a>
                 <span class="date">3 კვირის წინ</span>
               </div>
             </div>
