adding active class and number of likes

--- a/src/pages/termins_bank.html
+++ b/src/pages/termins_bank.html
@@ -266,7 +266,7 @@
               </div>
             </div>
             <div class="bank-tags">
-              <div>
+              <div class="active">
                 <a href="#">Front-End</a>
               </div>
               <div>
@@ -297,7 +297,9 @@
               <div class="like">
                 <img src="../../assets/images/like-icon.svg" alt="like" />
               </div>
+
               <h2>ათი შოკოლადი</h2>
+              <span class="like-number">1920</span>
               <div class="spans">
                 <span class="author">ავტორი ავტორი</span>
                 <span class="date">3 კვირის წინ</span>
