adding number of likes to all

--- a/src/pages/termins_bank.html
+++ b/src/pages/termins_bank.html
@@ -323,6 +323,7 @@
                 <img src="../../assets/images/like-icon.svg" alt="like" />
               </div>
               <h2>ათი შოკოლადი</h2>
+              <span class="like-number">1920</span>
               <div class="spans">
                 <a href="#" class="author">ავტორი ავტორი</a>
                 <span class="date">3 კვირის წინ</span>
@@ -346,6 +347,7 @@
                 <img src="../../assets/images/like-icon.svg" alt="like" />
               </div>
               <h2>ათი შოკოლადი</h2>
+              <span class="like-number">1920</span>
               <div class="spans">
                 <a href="#" class="author">ავტორი ავტორი</a>
                 <span class="date">3 კვირის წინ</span>
@@ -369,6 +371,7 @@
                 <img src="../../assets/images/like-icon.svg" alt="like" />
               </div>
               <h2>ათი შოკოლადი</h2>
+              <span class="like-number">1920</span>
               <div class="spans">
                 <a href="#" class="author">ავტორი ავტორი</a>
                 <span class="date">3 კვირის წინ</span>
@@ -392,6 +395,7 @@
                 <img src="../../assets/images/like-icon.svg" alt="like" />
               </div>
               <h2>ათი შოკოლადი</h2>
+              <span class="like-number">1920</span>
               <div class="spans">
                 <a href="#" class="author">ავტორი ავტორი</a>
                 <span class="date">3 კვირის წინ</span>
