--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -69,7 +69,7 @@
             <li><a href="#">პროფილის რედაქტირება</a></li>
             <li><a href="#">ჩემი განმარტებები</a></li>
             <li><a href="#">ჩემი ტერმინები</a></li>
-            <li><a href="../../index.html">გამოსვლა></a></li>
+            <li><a href="../../index.html">გამოსვლა</a></li>
           </ul>
         </div>
       </div>
