adding active like button and larger arrows

--- a/src/pages/termins_bank.html
+++ b/src/pages/termins_bank.html
@@ -295,7 +295,11 @@
             </div>
             <div class="description">
               <div class="like">
-                <img src="../../assets/images/like-icon.svg" alt="like" />
+                <img
+                  src="../../assets/images/like-icon.svg"
+                  alt="like"
+                  class="like-button"
+                />
               </div>
 
               <h2>ათი შოკოლადი</h2>
@@ -320,7 +324,11 @@
             </div>
             <div class="description">
               <div class="like">
-                <img src="../../assets/images/like-icon.svg" alt="like" />
+                <img
+                  src="../../assets/images/like-icon.svg"
+                  alt="like"
+                  class="like-button"
+                />
               </div>
               <h2>ათი შოკოლადი</h2>
               <span class="like-number">1920</span>
@@ -344,7 +352,11 @@
             </div>
             <div class="description">
               <div class="like">
-                <img src="../../assets/images/like-icon.svg" alt="like" />
+                <img
+                  src="../../assets/images/like-icon.svg"
+                  alt="like"
+                  class="like-button"
+                />
               </div>
               <h2>ათი შოკოლადი</h2>
               <span class="like-number">1920</span>
@@ -368,7 +380,11 @@
             </div>
             <div class="description">
               <div class="like">
-                <img src="../../assets/images/like-icon.svg" alt="like" />
+                <img
+                  src="../../assets/images/like-icon.svg"
+                  alt="like"
+                  class="like-button"
+                />
               </div>
               <h2>ათი შოკოლადი</h2>
               <span class="like-number">1920</span>
@@ -392,7 +408,11 @@
             </div>
             <div class="description">
               <div class="like">
-                <img src="../../assets/images/like-icon.svg" alt="like" />
+                <img
+                  src="../../assets/images/like-icon.svg"
+                  alt="like"
+                  class="like-button"
+                />
               </div>
               <h2>ათი შოკოლადი</h2>
               <span class="like-number">1920</span>
