adding new page named terms and condition

--- a/src/pages/definition.html
+++ b/src/pages/definition.html
@@ -206,7 +206,7 @@
         <div class="middle-block">
           <div class="contact-info">
             <p><a href="./contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p>გამოყენების წესები</p>
+            <p><a href="./terms_and_condition.html">გამოყენების წესები</a></p>
           </div>
         </div>
         <div class="right-block-partners">
@@ -222,7 +222,7 @@
         <div class="tablet-responsive">
           <div class="contact-info">
             <p><a href="./contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p>გამოყენების წესები</p>
+            <p><a href="./terms_and_condition.html">გამოყენების წესები</a></p>
             <div class="partners-logo">
               <div class="div-logo"></div>
               <div class="div-logo"></div>
