--- a/src/pages/sign_in.html
+++ b/src/pages/sign_in.html
@@ -163,7 +163,7 @@
                 <div class="rules">
                   <input type="checkbox" name="rules" id="rules" />
                   <label for="rules"
-                    ><a href="#">ვეთანხმები საიტის წესებს და პირობებს*</a></label
+                    ><a href="./terms_and_condition.html">ვეთანხმები საიტის წესებს და პირობებს*</a></label
                   >
                 </div>
               </div>
@@ -211,7 +211,9 @@
         <div class="middle-block">
           <div class="contact-info">
             <p><a href="./contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p>გამოყენების წესები</p>
+            <p><a href="./terms_and_condition.html"
+                >გამოყენების წესები</a
+              ></p>
           </div>
         </div>
         <div class="right-block-partners">
@@ -227,7 +229,9 @@
         <div class="tablet-responsive">
           <div class="contact-info">
             <p><a href="./contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p>გამოყენების წესები</p>
+            <p><a href="./terms_and_condition.html"
+                >გამოყენების წესები</a
+              ></p>
             <div class="partners-logo">
               <div class="div-logo"></div>
               <div class="div-logo"></div>
