--- a/index.html
+++ b/index.html
@@ -222,7 +222,11 @@
         <div class="middle-block">
           <div class="contact-info">
             <p><a href="./src/pages/contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p>გამოყენების წესები</p>
+            <p>
+              <a href="./src/pages/terms_and_condition.html"
+                >გამოყენების წესები</a
+              >
+            </p>
           </div>
         </div>
         <div class="right-block-partners">
@@ -238,7 +242,11 @@
         <div class="tablet-responsive">
           <div class="contact-info">
             <p><a href="./src/pages/contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p>გამოყენების წესები</p>
+            <p>
+              <a href="./src/pages/terms_and_condition.html"
+                >გამოყენების წესები</a
+              >
+            </p>
             <div class="partners-logo">
               <div class="div-logo"></div>
               <div class="div-logo"></div>
