--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -161,7 +161,9 @@
         <div class="middle-block">
           <div class="contact-info">
             <p><a href="./contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p>გამოყენების წესები</p>
+            <p><a href="./terms_and_condition.html"
+                >გამოყენების წესები</a
+              ></p>
           </div>
         </div>
         <div class="right-block-partners">
@@ -177,7 +179,9 @@
         <div class="tablet-responsive">
           <div class="contact-info">
             <p><a href="./contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p>გამოყენების წესები</p>
+            <p><a href="./terms_and_condition.html"
+                >გამოყენების წესები</a
+              ></p>
             <div class="partners-logo">
               <div class="div-logo"></div>
               <div class="div-logo"></div>
