--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -455,7 +455,7 @@
         <div class="middle-block">
           <div class="contact-info">
             <p><a href="./contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p>გამოყენების წესები</p>
+            <p><a href="./terms_and_condition.html">გამოყენების წესები</a></p>
           </div>
         </div>
         <div class="right-block-partners">
@@ -471,7 +471,7 @@
         <div class="tablet-responsive">
           <div class="contact-info">
             <p><a href="./contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p>გამოყენების წესები</p>
+            <p><a href="./terms_and_condition.html">გამოყენების წესები</a></p>
             <div class="partners-logo">
               <div class="div-logo"></div>
               <div class="div-logo"></div>
