fixing small errors

--- a/src/pages/termins_bank.html
+++ b/src/pages/termins_bank.html
@@ -262,7 +262,9 @@
               </div>
               <div class="right-search">
                 <img src="../../assets/images/Iconsearch.svg" alt="search" />
-                <input type="search" name="search" id="search" />
+                <form>
+                  <input type="search" name="search" id="search" />
+                </form>
               </div>
             </div>
             <div class="bank-tags">
