fixing rotating text

--- a/src/pages/definition.html
+++ b/src/pages/definition.html
@@ -95,7 +95,7 @@
     <main id="menu">
       <section class="definition-offer">
         <div class="container">
-          <div class="definition-header">
+          <div class="definition-header-1">
             <div class="definition-title">
               <h1>lorem ipsum</h1>
               <div class="info">
