adding click events and hover effect to profile page

--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -136,10 +136,13 @@
                   <span class="nav-txt">ჩემი განმარტებები</span>
                   <ul class="sub-ul-definition hidden">
                     <li class="sub-li-definition">
-                      <span class="nav-txt profile-active-sub-nav">ყველა</span>
+                      <span
+                        class="nav-txt profile-active-sub-nav nav-txt-hover-1"
+                        >ყველა</span
+                      >
                     </li>
                     <li class="sub-li-definition">
-                      <span class="nav-txt">გამარჯვებული</span>
+                      <span class="nav-txt nav-txt-hover-2">გამარჯვებული</span>
                     </li>
                   </ul>
                 </li>
@@ -148,10 +151,10 @@
                   <span class="nav-txt">ჩემი ტერმინები</span>
                   <ul class="sub-ul-termin hidden">
                     <li class="sub-li-termin">
-                      <span class="nav-txt">ყველა</span>
+                      <span class="nav-txt nav-txt-hover-3">ყველა</span>
                     </li>
                     <li class="sub-li-termin">
-                      <span class="nav-txt">დადასტურებული</span>
+                      <span class="nav-txt nav-txt-hover-4">დადასტურებული</span>
                     </li>
                   </ul>
                 </li>
