--- a/src/pages/error.html
+++ b/src/pages/error.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   
+    <meta name="description" content="შექმენი ქართული ტერმინი, შემოუერთდი ტერმინების კონკურსს!"/>
+    <meta property="og:type" content="website" />
+    <!-- <meta property="og:url" content="" /> -->
+    <meta property="og:title" content="კონტაქტი" />
+    <meta property="og:description" content="შექმენი ქართული ტერმინი, შემოუერთდი ტერმინების კონკურსს!" />
+    <meta property="og:image" content="../../assets/images/sharing-image.JPG" />
+
+    
+   
     <!-- icon -->
     <link rel="icon" type="image/x-icon" href="../../assets/images/logo.svg" />
     <!-- Font Awesome -->
