--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -261,7 +261,7 @@
                 </div>
                 <div class="definition">
                   <div class="definition-header">
-                    <span>განმარტების ნახვა (1)</span>
+                    <span>განმარტების ნახვა (2)</span>
                     <img
                       class="arrow"
                       src="../../assets/images/Icon-arrow-down.svg"
@@ -274,8 +274,28 @@
                       <span>ავტორი ავტორი</span>
                     </div>
                     <div class="like">
-                      <span>1,920</span>
-                      <img src="../../assets/images/fb.svg" alt="like" />
+                      <span class="like__number">1,920</span>
+                      <img
+                        src="../../assets/images/like-icon.svg"
+                        alt="like"
+                        class="like__img"
+                      />
+                      <span class="like__time">3 კვირის წინ</span>
+                    </div>
+                  </div>
+                  <div class="definition-box">
+                    <div class="definition-info">
+                      <h2>ათს შოკოლადი</h2>
+                      <span>ავტორი ავტორი</span>
+                    </div>
+                    <div class="like">
+                      <span class="like__number">1,920</span>
+                      <img
+                        src="../../assets/images/like-icon.svg"
+                        alt="like"
+                        class="like__img"
+                      />
+                      <span class="like__time">3 კვირის წინ</span>
                     </div>
                   </div>
                 </div>
@@ -308,8 +328,13 @@
                       <span>ავტორი ავტორი</span>
                     </div>
                     <div class="like">
-                      <span>1,920</span>
-                      <img src="../../assets/images/fb.svg" alt="like" />
+                      <span class="like__number">1,920</span>
+                      <img
+                        src="../../assets/images/like-icon.svg"
+                        alt="like"
+                        class="like__img"
+                      />
+                      <span class="like__time">3 კვირის წინ</span>
                     </div>
                   </div>
                 </div>
@@ -342,8 +367,13 @@
                       <span>ავტორი ავტორი</span>
                     </div>
                     <div class="like">
-                      <span>1,920</span>
-                      <img src="../../assets/images/fb.svg" alt="like" />
+                      <span class="like__number">1,920</span>
+                      <img
+                        src="../../assets/images/like-icon.svg"
+                        alt="like"
+                        class="like__img"
+                      />
+                      <span class="like__time">3 კვირის წინ</span>
                     </div>
                   </div>
                 </div>
@@ -376,8 +406,13 @@
                       <span>ავტორი ავტორი</span>
                     </div>
                     <div class="like">
-                      <span>1,920</span>
-                      <img src="../../assets/images/fb.svg" alt="like" />
+                      <span class="like__number">1,920</span>
+                      <img
+                        src="../../assets/images/like-icon.svg"
+                        alt="like"
+                        class="like__img"
+                      />
+                      <span class="like__time">3 კვირის წინ</span>
                     </div>
                   </div>
                 </div>
@@ -410,8 +445,13 @@
                       <span>ავტორი ავტორი</span>
                     </div>
                     <div class="like">
-                      <span>1,920</span>
-                      <img src="../../assets/images/fb.svg" alt="like" />
+                      <span class="like__number">1,920</span>
+                      <img
+                        src="../../assets/images/like-icon.svg"
+                        alt="like"
+                        class="like__img"
+                      />
+                      <span class="like__time">3 კვირის წინ</span>
                     </div>
                   </div>
                 </div>
