working on mobile responsive

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -110,17 +110,17 @@
             </div>
           </div>
         </section>
-        <section class="project" id="project">
+        <section class="project third" id="project">
           
-          <div class="container">
+          <div class="container worked-on-project">
             <h5>პროექტზე მუშაობდნენ</h5>
             <div class="inner-cont">
               <h3>გიორგი&nbsp;აბზიანიძე</h3>
               <p>პროექტის&nbsp;მენეჯერი</p>
             </div>
             <div class="inner-cont">
-              <h3>სალომე&nbsp;ღუდუმიძე</h3>
-              <p>დიზაინერი</p>
+              <h3>გიორგი&nbsp;ცუხიშვილი</h3>
+              <p><nobr>Front-End&nbsp;დეველოპერი</nobr></p>
             </div>
             <div class="inner-cont">
               <h3>გალაქტიონ&nbsp;დანელია</h3>
@@ -133,11 +133,14 @@
             <div class="inner-cont">
               <h3>მარიამ&nbsp;დაუთაშვილი</h3>
               <p><nobr>Front-End&nbsp;დეველოპერი</nobr></p>
-            </div>
+            </div> 
+            <div class="more-people hidden">        
             <div class="inner-cont">
-              <h3>გიორგი&nbsp;ცუხიშვილი</h3>
-              <p><nobr>Front-End&nbsp;დეველოპერი</nobr></p>
-            </div>
+              <h3>სალომე&nbsp;ღუდუმიძე</h3>
+              <p>დიზაინერი</p>
+            </div> 
+          </div> 
+          <p class="click-for-authors">წაიკითხეთ სრულად</p>
           </div>
         </section>
         <section class="partners-section">
