--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -487,7 +487,7 @@
         </div>
         <div class="right-block-partners">
           <div class="partners">
-            <p>პარტნიორების ლოგოები</p>
+            <p>პარტნიორები</p>
             <div class="partners-logo">
               <div class="div-logo"></div>
               <div class="div-logo"></div>
