--- a/src/pages/sign_in.html
+++ b/src/pages/sign_in.html
@@ -195,7 +195,7 @@
 
             <section class="recovery-password-success hidden">
               <div class="container">
-                <h1>მონაცემები წარმატებით შეიცვალა</h1>
+                <h1>პაროლი წარმატებით შეიცვალა</h1>
                 <img src="../../assets/images/tick-mark.svg" alt="tick-mark" />
               </div>
             </section>
