--- a/src/pages/sign_in.html
+++ b/src/pages/sign_in.html
@@ -119,6 +119,7 @@
                 id="password"
                 placeholder="პაროლი*"
                 class="psw"
+                style="margin-bottom: 10px;"
                 >
 
                 <img
@@ -126,6 +127,8 @@
                   src="../../assets/images/icon-eye.svg"
                   alt="eye"
                 />
+                <span class="change-text-error-psw hidden"><div><img src="../../assets/images/error-svg.svg" alt="error"><p class="change-text-error-psw-text">პაროლი სავალდებულოა</p></div></span>
+
               </div>
               <span class="error hidden"><div><img src="../../assets/images/error-svg.svg" alt="error"><p>პაროლი სავალდებულოა</p></div></span>
 
