Adding like button effect on definition page

--- a/src/pages/definition.html
+++ b/src/pages/definition.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   
-    <meta name="description" content="შექმენი ქართული ტერმინი, შემოუერთდი ტერმინების კონკურსს!"/>
+
+    <meta
+      name="description"
+      content="შექმენი ქართული ტერმინი, შემოუერთდი ტერმინების კონკურსს!"
+    />
     <meta property="og:type" content="website" />
     <!-- <meta property="og:url" content="" /> -->
     <meta property="og:title" content="შექმენი ქართული ტერმინი" />
-    <meta property="og:description" content="შექმენი ქართული ტერმინი, შემოუერთდი ტერმინების კონკურსს!" />
+    <meta
+      property="og:description"
+      content="შექმენი ქართული ტერმინი, შემოუერთდი ტერმინების კონკურსს!"
+    />
     <meta property="og:image" content="../../assets/images/sharing-image.JPG" />
 
-    
-   
     <!-- icon -->
     <link rel="icon" type="image/x-icon" href="../../assets/images/logo.svg" />
     <!-- Font Awesome -->
@@ -149,7 +153,11 @@
           <div class="other-terms">
             <div class="description">
               <div class="like">
-                <img src="../../assets/images/icon-like.svg" alt="like" />
+                <img
+                  src="../../assets/images/icon-like.svg"
+                  alt="like"
+                  class="like-button"
+                />
               </div>
               <div class="info">
                 <h2>ათი შოკოლადი</h2>
@@ -162,7 +170,11 @@
             </div>
             <div class="description">
               <div class="like">
-                <img src="../../assets/images/icon-like.svg" alt="like" />
+                <img
+                  src="../../assets/images/icon-like.svg"
+                  alt="like"
+                  class="like-button"
+                />
               </div>
               <div class="info">
                 <h2>ათი შოკოლადი</h2>
@@ -175,7 +187,11 @@
             </div>
             <div class="description">
               <div class="like">
-                <img src="../../assets/images/icon-like.svg" alt="like" />
+                <img
+                  src="../../assets/images/icon-like.svg"
+                  alt="like"
+                  class="like-button"
+                />
               </div>
               <div class="info">
                 <h2>ათი შოკოლადი</h2>
