Adding a tags to front end and media query to success message

--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -273,7 +273,7 @@
                     />
                   </div>
                   <div class="terms-left">
-                    <h1>Front-End</h1>
+                    <a href="#">Front-End</a>
                     <div class="social-fb">
                       <img src="../../assets/images/fb.svg" alt="facebook" />
                     </div>
@@ -330,7 +330,7 @@
                     />
                   </div>
                   <div class="terms-left">
-                    <h1>Front-End</h1>
+                    <a href="#">Front-End</a>
                     <div class="social-fb">
                       <img src="../../assets/images/fb.svg" alt="facebook" />
                     </div>
@@ -357,7 +357,7 @@
                     />
                   </div>
                   <div class="terms-left">
-                    <h1>Front-End</h1>
+                    <a href="#">Front-End</a>
                     <div class="social-fb">
                       <img src="../../assets/images/fb.svg" alt="facebook" />
                     </div>
@@ -399,7 +399,7 @@
                     />
                   </div>
                   <div class="terms-left">
-                    <h1>Front-End</h1>
+                    <a href="#">Front-End</a>
                     <div class="social-fb">
                       <img src="../../assets/images/fb.svg" alt="facebook" />
                     </div>
@@ -426,7 +426,7 @@
                     />
                   </div>
                   <div class="terms-left">
-                    <h1>Front-End</h1>
+                    <a href="#">Front-End</a>
                     <div class="social-fb">
                       <img src="../../assets/images/fb.svg" alt="facebook" />
                     </div>
