--- a/src/pages/sign_in.html
+++ b/src/pages/sign_in.html
@@ -137,7 +137,7 @@
                   <input type="checkbox" name="remember" id="remember" />
                   <label for="remember">დამიმახსოვრე</label>
                 </div>
-                <p class="rec-text" onclick="showRecPass()">პაროლის აღდგენა</p>
+                <p class="rec-text rec-passowrd-text" >პაროლის აღდგენა</p>
               </div>
               <button type="button" class="submit-login">ავტორიზაცია</button>
               <span class="no-account">არ გაქვთ პროფილი? გაიარეთ <span id="not-account" onclick="changeAutoToRegistr()">რეგისტრაცია</span></button></span>
@@ -188,22 +188,20 @@
               <button type="button" class="submit-registration">რეგისტრაცია</button>
             </form>
           </div>
-          <div class="recovery-password">
-            <p class="recovery-title">პაროლის აღდგენა</p>
-            <form class="password-form">
-              <input class="psw-recovery" type="password" placeholder="ახალი პაროლი" />
+          <div class="recovery-email ">
+            <p class="recovery-email-title">შეიყვანე შენი ელ-ფოსტა</p>
+            <form class="email-form">
+              <input class="em-recovery" type="email" placeholder="ელ-ფოსტა" />
               <span class="error hidden"><div><img src="../../assets/images/error-svg.svg" alt="error"><p>ველი სავალდებულოა</p></div></span>
 
-              <input class="psw-recovery-rpt" type="password" placeholder="პაროლის გამეორება" />
-              <span class="error hidden"><div><img src="../../assets/images/error-svg.svg" alt="error"><p>ველი სავალდებულოა</p></div></span>
-
-              <button type="button" class="submit-recovery">დადასტურება</button>
+            
+              <button type="button" class="submit-email-recovery">გაგზავნა</button>
 
             </form>
 
-            <section class="recovery-password-success hidden">
+            <section class="recovery-email-success hidden">
               <div class="container">
-                <h1>პაროლი წარმატებით შეიცვალა</h1>
+                <h1>ელ-ფოსტა წარმატებით გაიგზავნა</h1>
                 <img src="../../assets/images/tick-mark.svg" alt="tick-mark" />
               </div>
             </section>
