Adding changed email success text with sent email

--- a/src/pages/sign_in.html
+++ b/src/pages/sign_in.html
@@ -201,7 +201,7 @@
 
             <section class="recovery-email-success hidden">
               <div class="container">
-                <h1>ელ-ფოსტა წარმატებით გაიგზავნა</h1>
+                <h1 class="email-change-text"></h1>
                 <img src="../../assets/images/tick-mark.svg" alt="tick-mark" />
               </div>
             </section>
