fixed some issues

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -134,7 +134,7 @@
                 </div></span
               >
               <input
-                type="button"
+                type="submit"
                 value="გაგზავნა"
                 id="sendButton"
                 onclick="callIsEmpty()"
