--- a/src/pages/termins_bank.html
+++ b/src/pages/termins_bank.html
@@ -113,32 +113,32 @@
               <div class="left-alphabet">
                 <div class="desktop-alphabet">
                   <div class="letters">
-                    <a href="#">A</a>
-                    <a href="#">B</a>
-                    <a href="#">C</a>
-                    <a href="#">D</a>
-                    <a href="#">E</a>
-                    <a href="#">F</a>
-                    <a href="#">G</a>
-                    <a href="#">H</a>
-                    <a href="#">I</a>
-                    <a href="#">J</a>
-                    <a href="#">K</a>
-                    <a href="#">L</a>
-                    <a href="#">M</a>
-                    <a href="#">N</a>
-                    <a href="#">O</a>
-                    <a href="#">P</a>
-                    <a href="#">Q</a>
-                    <a href="#">R</a>
-                    <a href="#">S</a>
-                    <a href="#">T</a>
-                    <a href="#">U</a>
-                    <a href="#">V</a>
-                    <a href="#">W</a>
-                    <a href="#">X</a>
-                    <a href="#">Y</a>
-                    <a href="#">Z</a>
+                    <a href="#" class="swiper-slide">A</a>
+                    <a href="#" class="swiper-slide">B</a>
+                    <a href="#" class="swiper-slide">C</a>
+                    <a href="#" class="swiper-slide">D</a>
+                    <a href="#" class="swiper-slide">E</a>
+                    <a href="#" class="swiper-slide">F</a>
+                    <a href="#" class="swiper-slide">G</a>
+                    <a href="#" class="swiper-slide">H</a>
+                    <a href="#" class="swiper-slide">I</a>
+                    <a href="#" class="swiper-slide">J</a>
+                    <a href="#" class="swiper-slide">K</a>
+                    <a href="#" class="swiper-slide">L</a>
+                    <a href="#" class="swiper-slide">M</a>
+                    <a href="#" class="swiper-slide">N</a>
+                    <a href="#" class="swiper-slide">O</a>
+                    <a href="#" class="swiper-slide">P</a>
+                    <a href="#" class="swiper-slide">Q</a>
+                    <a href="#" class="swiper-slide">R</a>
+                    <a href="#" class="swiper-slide">S</a>
+                    <a href="#" class="swiper-slide">T</a>
+                    <a href="#" class="swiper-slide">U</a>
+                    <a href="#" class="swiper-slide">V</a>
+                    <a href="#" class="swiper-slide">W</a>
+                    <a href="#" class="swiper-slide">X</a>
+                    <a href="#" class="swiper-slide">Y</a>
+                    <a href="#" class="swiper-slide">Z</a>
                   </div>
                 </div>
                 <div class="desktop-alphabet">
@@ -442,7 +442,7 @@
               />
             </div>
             <div class="page-numbers">
-              <div class="page-num">1</div>
+              <div class="page-num active-page">1</div>
               <div class="page-num">2</div>
               <div class="page-num">3</div>
               <div class="page-num">...</div>
