--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <section class="poster">
         <div class="container">
           <img src="assets/images/light-search.svg" alt="light-ball" />
-          <div class="text">
+          <div class="main-text">
             <p>შემოუერთდი ტერმინების კონკურსს!</p>
           </div>
         </div>
@@ -180,18 +180,8 @@
           <div class="left-block">
             <div class="about-project-text">
               <h5>პროექტის შესახებ</h5>
-              <p>
-                ათს შოკოლადი კათოლიკეებთან ედევნებინათ გდაგვირღვიესო, მუსაოფობდა
-                ვიეტნამიდან. ვტკბებოდი არავისიც მოგვიწოდებენ რაიმეს
-                ჩაექვავებინათ შეგხედავდა ორასს სატრფოთი, გადმოდგება ეკვროდა,
-                მუსაოფობდა მოჩრდილა ციკლში. არსებაა დაგადე ლოთის ილუზიებით
-                ენუქიძემ რექვიემივით გაგიღებდა ულვაშები. ბუტბუტებდა ლოთის რაიმეს
-                შეერთებით ვტკბებოდი, შეგხედავდა შოკოლადი გაიტეხ იგლოვებს,
-                გაშიშვლდეს გადანახა. ციკლში შერჩე შეიძულეს აღუნიშნავ,
-                მემარცხენედ ფულადი დამელაპარაკა. მოშორდი სახეზეასხურეს ავახშმეს,
-                დამელაპარაკა, მოჩრდილა დავიშლი შლის გაგიღებდა პირჯვარი ორასს
-                გულწრფელობა, შეგხედავდა ჩამტვრეულ, ენუქიძემ რექვიემივით.
-              </p>
+              <p class="text">ათს შოკოლადი კათოლიკეებთან ედევნებინათ გდაგვირღვიესო, მუსაოფობდა ვიეტნამიდან. ვტკბებოდი არავისიც მოგვიწოდებენ რაიმეს ჩაექვავებინათ შეგხედავდა ორასს სატრფოთი, გადმოდგება ეკვროდა, მუსაოფობდა მოჩრდილა ციკლში. არსებაა დაგადე ლოთის ილუზიებით ენუქიძემ რექვიემივით გაგიღებდა ულვაშები. ბუტბუტებდა ლოთის რაიმეს შეერთებით ვტკბებოდი, შეგხედავდა შოკოლადი გაიტეხ იგლოვებს, გაშიშვლდეს გადანახა. ციკლში შერჩე შეიძულეს აღუნიშნავ, მემარცხენედ ფულადი დამელაპარაკა. მოშორდი სახეზეასხურეს ავახშმეს, დამელაპარაკა, მოჩრდილა დავიშლი შლის გაგიღებდა პირჯვარი ორასს გულწრფელობა, შეგხედავდა ჩამტვრეულ, ენუქიძემ რექვიემივით.<span class="more-texts">გრძელდება ედევნებინათ გდაგვირღვიესო, მუსაოფობდა ვიეტნამიდან. ვტკბებოდი არავისიც მოგვიწოდებენ რაიმეს ჩაექვავებინათ შეგხედავდა ორასს სატრფოთი, გადმოდგება ეკვროდა, მუსაოფობდა მოჩრდილა ციკლში. არსებაა დაგადე ლოთის ილუზიებით ენუქიძემ რექვიემივით გაგიღებდა ულვაშები. ბუტბუტებდა ლოთის რაიმეს შეერთებით ვტკბებოდი, შეგხედავდა შოკოლადი გაიტეხ იგლოვებს, გაშიშვლდეს გადანახა. ციკლში შერჩე შეიძულეს აღუნიშნავ, მემარცხენედ ფულადი დამელაპარაკა. მოშორდი სახეზეასხურეს ავახშმეს, დამელაპარაკა, მოჩრდილა დავიშლი შლის გაგიღებდა პირჯვარი ორასს გულწრფელობა, შეგხედავდა ჩამტვრეულ, ენუქიძემ რექვიემივით.</span></p>
+              <span class="more-click">წაიკითხეთ სრულად</span>
             </div>
             <a href="src/pages/new_term.html">
               <div class="btn-your-term">
@@ -222,15 +212,15 @@
             </div>
           </a>
           <div class="social-icons">
-            <div class="circle insta">
-              <a href="#"><i class="fa fa-instagram"></i></a>
-            </div>
-            <div class="circle twitter">
-              <a href="#"><i class="fa fa-twitter"></i></a>
-            </div>
-            <div class="circle fb">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-            </div>
+            <a href=""><div class="circle insta">
+              <i class="fa fa-instagram"></i>
+            </div></a>
+            <a href=""><div class="circle twitter">
+              <i class="fa fa-twitter"></i>
+            </div></a>
+            <a href=""><div class="circle fb">
+              <i class="fa fa-facebook"></i>
+            </div></a>
           </div>
         </div>
         <div class="middle-block">
