footer social icons change structure

--- a/src/pages/termins_bank.html
+++ b/src/pages/termins_bank.html
@@ -461,7 +461,7 @@
     <footer>
       <div class="container">
         <div class="left-block-social">
-          <a href="../../index.html" class="logoStyle">
+          <a href="./index.html" class="logoStyle">
             <div class="main">
               <div class="logo">
                 <img src="../../assets/images/logo.svg" alt="logo" />
@@ -470,21 +470,25 @@
             </div>
           </a>
           <div class="social-icons">
-            <div class="circle insta">
-              <a href="#"><i class="fa fa-instagram"></i></a>
-            </div>
-            <div class="circle twitter">
-              <a href="#"><i class="fa fa-twitter"></i></a>
-            </div>
-            <div class="circle fb">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-            </div>
+            <a href=""><div class="circle insta">
+              <i class="fa fa-instagram"></i>
+            </div></a>
+            <a href=""><div class="circle twitter">
+              <i class="fa fa-twitter"></i>
+            </div></a>
+            <a href=""><div class="circle fb">
+              <i class="fa fa-facebook"></i>
+            </div></a>
           </div>
         </div>
         <div class="middle-block">
           <div class="contact-info">
             <p><a href="./contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p><a href="./terms_and_condition.html">გამოყენების წესები</a></p>
+            <p>
+              <a href="./terms_and_condition.html"
+                >გამოყენების წესები</a
+              >
+            </p>
           </div>
         </div>
         <div class="right-block-partners">
@@ -500,7 +504,11 @@
         <div class="tablet-responsive">
           <div class="contact-info">
             <p><a href="./contact.html">საკონტაქტო ინფორმაცია</a></p>
-            <p><a href="./terms_and_condition.html">გამოყენების წესები</a></p>
+            <p>
+              <a href="./terms_and_condition.html"
+                >გამოყენების წესები</a
+              >
+            </p>
             <div class="partners-logo">
               <div class="div-logo"></div>
               <div class="div-logo"></div>
