--- a/src/pages/login_or_register.html
+++ b/src/pages/login_or_register.html
@@ -98,52 +98,11 @@
       </div>
     </header>
     <main id="menu">
-      <section class="new-term">
+      <section class="login-required">
         <div class="container">
           <h2>შემოგვთავაზე შენი ტერმინი</h2>
-          <div class="inputs-container">
-            <form>
-              <input
-                type="text"
-                placeholder="შემოგვთავაზე შენი ტერმინი*"
-                id="new-term"
-              />
-              <span class="error hidden"
-                ><div>
-                  <img src="../../assets/images/error-svg.svg" alt="error" />
-                  <p>ველი სავალდებულოა</p>
-                </div></span
-              >
-
-              <input
-                type="text"
-                placeholder="ციტატა, სადაც გამოყენებულია ეს ტერმინი"
-              />
-              <div class="new-term-select-container">
-                <select name="field" class="new-term-select">
-                  <option value="" disabled selected hidden>
-                    აირჩიე სფერო*
-                  </option>
-                  <option value="Front-end development">
-                    Front-end development
-                  </option>
-                  <option value="Back-end development">
-                    Back-end development
-                  </option>
-                  <option value="UI/UX design">UI/UX design</option>
-                  <option value="Project managment">Project managment</option>
-                </select>
-                <p class="selector-background"></p>
-                <p class="selector-arrow">&#10095</p>
-                <span class="error-selector hidden"
-                ><div>
-                  <img src="../../assets/images/error-svg.svg" alt="error" />
-                  <p>ველი სავალდებულოა</p>
-                </div></span
-              >
-              </div>
-              <button type="button" id="addNewTerm">დამატება</button>
-            </form>
+          <div class="login-or-register">
+            <h3>ტერმინის დასამატებლად გთხოვთ გაიაროთ <a href="sign_in.html">ავტორიზაცია</a> ან <a href="sign_in.html">რეგისტრაცია</a></h3>
           </div>
         </div>
       </section>
