--- a/src/pages/termins_bank.html
+++ b/src/pages/termins_bank.html
@@ -461,7 +461,7 @@
     <footer>
       <div class="container">
         <div class="left-block-social">
-          <a href="./index.html" class="logoStyle">
+          <a href="../../index.html" class="logoStyle">
             <div class="main">
               <div class="logo">
                 <img src="../../assets/images/logo.svg" alt="logo" />
