--- a/src/pages/definition.html
+++ b/src/pages/definition.html
@@ -114,7 +114,7 @@
               <h1>lorem ipsum</h1>
               <div class="info">
                 <div class="tags">
-                  <a href="#">Front-End</a>
+                  <a class="active" href="#">Front-End</a>
                 </div>
                 <div class="fb-icon">
                   <img src="../../assets/images/fb.svg" alt="fb" />
